--- a/src/requirements/bonus/website/index.html
+++ b/src/requirements/bonus/website/index.html
@@ -77,17 +77,28 @@
     <div class="relative w-[60%] mx-auto bg-slate-500 bg-opacity-40 p-5 rounded-2xl">
 
         <!-- docker -->
-        <div id="docker" class="bg-black bg-opacity-50 p-8 mb-10 rounded-xl">
-            <h2 class="text-2xl font-bold text-[#1bd1ff] border-b-2 border-[#1bd1ff] pb-2 mb-4">What is Docker?</h2>
-            <img class="w-full h-auto rounded-xl mb-4" src="assets/docker.jpg" alt="Docker Logo" />
-            <p class="text-lg text-white font-semibold">Docker is a powerful platform that enables you to develop,
-                deploy, and run applications in isolated environments called containers. Containers allow you to package
-                an application with all of its dependencies, including the operating system libraries, making it
-                portable and easier to deploy across different systems.</p>
-            <p class="text-lg text-white font-semibold">Containers are lightweight and efficient because they share the
-                host system's operating system kernel but remain isolated from other containers. This makes Docker
-                containers faster to start and smaller in size compared to traditional virtual machines.</p>
-        </div>
+                <!-- docker -->
+                <div id="docker" class="bg-black bg-opacity-50 p-8 mb-10 rounded-xl">
+                    <h2 class="text-2xl font-bold text-[#1bd1ff] border-b-2 border-[#1bd1ff] pb-2 mb-4">What is Docker?</h2>
+                    <img class="w-full h-auto rounded-xl mb-4" src="assets/docker.jpg" alt="Docker Logo" />
+                    <p class="text-lg text-white font-semibold">Docker is a powerful platform that enables you to develop, deploy, and run applications in isolated environments called containers. Containers allow you to package an application with all of its dependencies, including the operating system libraries, making it portable and easier to deploy across different systems.</p>
+                    <p class="text-lg text-white font-semibold">Containers are lightweight and efficient because they share the host system's operating system kernel but remain isolated from other containers. This makes Docker containers faster to start and smaller in size compared to traditional virtual machines.</p>
+                    <h3 class="text-xl font-bold text-[#1bd1ff] mt-6 mb-2">Key Docker Features</h3>
+                    <ul class="list-disc pl-6 text-white font-semibold">
+                        <li>Portability: Package your application and its dependencies into a container and run it anywhere.</li>
+                        <li>Efficiency: Containers share the host kernel, reducing resource usage compared to virtual machines.</li>
+                        <li>Isolation: Ensure that applications run in their own secure, isolated environments.</li>
+                        <li>Scalability: Easily scale applications using Docker Swarm or Kubernetes.</li>
+                    </ul>
+                    <h3 class="text-xl font-bold text-[#1bd1ff] mt-6 mb-2">Common Use Cases</h3>
+                    <ul class="list-disc pl-6 text-white font-semibold">
+                        <li>Microservices architecture: Deploy applications as a collection of loosely coupled services.</li>
+                        <li>Development environments: Quickly set up and share development environments with teams.</li>
+                        <li>Continuous Integration/Continuous Deployment (CI/CD): Streamline testing and deployment processes.</li>
+                        <li>Application modernization: Containerize legacy applications for easier management and scalability.</li>
+                    </ul>
+                </div>
+        
 
         <!-- docker-compose -->
         <div id="docker-compose" class="bg-black bg-opacity-50 p-8 mb-10 rounded-xl">
