--- a/src/requirements/bonus/website/index.html
+++ b/src/requirements/bonus/website/index.html
@@ -52,11 +52,10 @@
     </h1>
 
     <!-- Table of Contents -->
-    <div class="bg-black bg-opacity-50 p-5 rounded-2xl w-[20%] m-auto time fixed">
-
-        <button id="toggleButton" class="text-[1.6rem] font-bold text-[#ffffff] bg-[#1bd1ff] p-2 rounded-xl w-full mb-4"
+    <div class="bg-slate-900 top-[40%]  left-[3%] rounded-2xl p-2 time fixed">
+        <button id="toggleButton" class="text-[1.6rem] font-bold text-[#caccce]"
             onclick="toggleTableOfContents()">
-            Table of Contents
+            - Table of Contents
         </button>
 
         <ul id="tocList" class="hidden">
@@ -74,7 +73,7 @@
         </ul>
     </div>
 
-    <div class="relative w-[60%] mx-auto bg-slate-500 bg-opacity-40 p-5 rounded-2xl">
+    <div class="relative w-[60%] mx-auto bg-opacity-40 p-5 rounded-2xl">
 
         <!-- docker -->
                 <!-- docker -->
